# server/src/db/index.ts
@@ -5,6 +5,7 @@
 
 import * as Authors from "./authors";
 import * as FeatureTags from "./featuretags";
+import * as Magazines from "./magazines";
 import * as Publishers from "./publishers";
 import * as ReferenceTypes from "./referencetypes";
 import * as Series from "./series";
@@ -14,6 +15,7 @@ import * as Users from "./users";
 export {
   Authors,
   FeatureTags,
+  Magazines,
   Publishers,
   ReferenceTypes,
   Series,
