# server/src/types/magazine.ts
@@ -1,0 +1,8 @@
+/*
+  Types related to the Magazine model and code.
+ */
+
+export type MagazineFetchOpts = {
+  issues?: boolean;
+  issueCount?: boolean;
+};
